# gpsImuNode

./: CMakeLists.txt  README.md  package.xml
include/: classes.h  estimationNode.hpp  fdesSetter.h  filter.h  filterImu.hpp  filterTW.h  gnssimu.hpp  gpsImuNode.hpp
launch/: gps2Griffin.launch  gps2Phoenix.launch
src/: compFilterMatrices.cpp  estimationNode.cpp  fdesSetter.cpp  filter.cpp  filterImu.cpp  filterTW.cpp  gnssImuFilter.cpp  gpsCallbacks.cpp  gpsImuNode.cpp  mathHelperFunctions.cpp
src/mexFiles/: cfilterMeasure.cpp  cfilterPropagate.cpp
