<?xml version="1.0"?>
<package>
  <name>gps_imu</name>
  <version>0.0.0</version>
  <description>The gps_kf package</description>

  <maintainer email="mma2739@todo.todo">mma2739</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gbx_ros_bridge_msgs</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>cmake_modules</run_depend> 
  <run_depend>roscpp</run_depend>
  <run_depend>gbx_ros_bridge_msgs</run_depend>


  <export>
  </export>
</package>
